--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-Click==7.0
-Flask==1.1.1
-Flask-SQLAlchemy==2.4.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-SQLAlchemy==1.3.15
-Werkzeug==1.0.0
+Flask==2.2.2
+Flask_SQLAlchemy==2.5.1
